Fixing meta color

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <meta name='language' content='FR'>
     <meta name='target' content='all'>
-    <meta name='theme-color' content='#128FD0'>
+    <meta name='theme-color' content='#ffffff'>
 
     <link rel='shortcut icon' type='image/png' href='https://dyinglight-france.fr/assets/img/logo.jpg'>
     <link rel="apple-touch-icon" href="https://dyinglight-france.fr/assets/img/logo.jpg" />
