--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="apple-touch-icon" href="https://dyinglight-france.fr/assets/img/logo.jpg" />
 
     <!-- Twitter Card meta -->
-    <meta name='twitter:card' content='summary'>
+    <meta name='twitter:card' content='summary_large_image'>
     <meta name="twitter:title" content="Communauté discord Française Dying Light" />
     <meta name='twitter:url' content='https://dyinglight-france.fr' />
     <meta name='twitter:domain' content='dyinglight-france.fr' />
